# avi-horizon-dashboard

./: MANIFEST.in  README.rst  ReleaseNote  create_release.sh  openstack-common.conf  requirements.txt.old  setup.cfg  setup.py  test_panel.sh
avidashboard/: __init__.py
avidashboard/api/: __init__.py  avi.py
avidashboard/dashboards/project/: __init__.py  fake_panel.py
avidashboard/dashboards/project/loadbalancers/: panel.py  tables.py  tabs.py  urls.py  views.py  workflows.py
avidashboard/dashboards/project/loadbalancers/templates/aviloadbalancers/: avi_analytics.html
avidashboard/enabled/: _1490_avi_lbaas.py  _90_avi_lbaas.py
avidashboard/templates/: avi_analytics.html
