[metadata]
name = avidashboard
summary = Avi Horizon UI bits
description-file =
    README.rst
author = Avi
author-email = ypraveen@avinetworks.com
home-page = http://www.avinetworks.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    avidashboard

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = avidashboard/locale
domain = avidashboard

[update_catalog]
domain = avidashboard
output_dir = avidashboard/locale
input_file = avidashboard/locale/avidashboard.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = avidashboard/locale/avidashboard.pot
